Fix review container height to be aligned with restaurant description

--- a/client/src/components/NodeView/NodeContent/RestaurantContent/RestaurantContent.scss
+++ b/client/src/components/NodeView/NodeContent/RestaurantContent/RestaurantContent.scss
@@ -64,7 +64,7 @@
     }
 
     .scrollable {
-      max-height: 50vh;
+      max-height: 100vh;
       overflow: auto;
     }
   }
